# cn_poems_api

./: .env  Cargo.toml  README.MD
migrations/2021-03-13-135033_poems/: down.sql  up.sql
migrations/2021-03-17-024052_sentence/: down.sql  up.sql
migrations/2021-03-17-053657_authors/: down.sql  up.sql
src/: handlers.rs  main.rs  models.rs  pagination.rs  schema.rs
